Add grid and unit tags to logo and nearest playgrounds

--- a/index.html
+++ b/index.html
@@ -12,330 +12,330 @@
 </head>
 <body>
 
-<header class="grid gutter-1-2">
-<img class="unit xs-2-3 s-1-2 m-1-2 l-1-2 push" src="images/logo.svg" alt="">
+  <header class="grid gutter-1-2 pad-t-1-2">
+    <img class="unit xs-2-3 s-1-2 m-1-2 l-1-2 push logo" src="images/logo.svg" alt="">
 
-<div class="unit xs-1 s-1-2 m-1-2 l-1-2 push">
-<label for="search"></label>
-<input id="search" type="search" name="search-bar" value="">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 push">
+      <label for="search"></label>
+      <input id="search" type="search" name="search-bar" value="">
 
-</div>
-</header>
-
-<div class="playgrounds gutter-1-2 pad-b-1-2">
-<h2 class="pad-t">Nearest playgrounds</h2>
-
-<div class="box island-1-2 push-1-2">
-  <p class="bold push-0">373</p>
-  <p class="italic push-0">Distance</p>
-  <p class="push-0">0.75km</p>
-  </div>
-
-  <div class="box island-1-2 push-1-2">
-    <p class="bold push-0">1700</p>
-    <p class="italic push-0">Distance</p>
-    <p class="push-0">2.58km</p>
-  </div>
-
-  <div class="box island-1-2 push-1-2">
-    <p class="bold push-0">960</p>
-    <p class="italic push-0">Distance</p>
-    <p class="push-0">3.03km</p>
-  </div>
-  </div>
-
-<div class="playground-city">
-  <table class="">
-          <caption class="not-italic bold giga">Playgrounds in the city</caption>
-          <thead>
-            <tr>
-              <th class="park-id" scope="col">Park ID</th>
-              <th class="park-type" scope="col">Park type</th>
-              <th class="age-group" scope="col">Age group</th>
-              <th class="swings" scope="col">Swings</th>
-              <th class="slides" scope="col">Slides</th>
-              <th class="seesaws" scope="col">Seesaws</th>
-              <th class="sandboxes" scope="col">Sandboxes</th>
-              <th class="playhouses" scope="col">Playhouses</th>
-            </tr>
-          </thead>
-
-          <tbody>
-            <tr>
-              <th class="" scope="row">545</th>
-              <td>Play area</td>
-              <td>Junior</td>
-              <td>Yes</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
-
-            <tr>
-              <th class="" scope="row">81</th>
-              <td>Play area</td>
-              <td>Toddler</td>
-              <td>Yes</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
-
-            <tr>
-              <th class="" scope="row">140</th>
-              <td>Play structure</td>
-              <td>Junior</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
-
-            <tr>
-              <th class="" scope="row">376</th>
-              <td>Play area</td>
-              <td>Toddler</td>
-              <td>Yes</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
-
-            <tr>
-              <th class="" scope="row">373</th>
-              <td>Play area</td>
-              <td>Junior</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>Yes</td>
-            </tr>
-
-            <tr>
-              <th class="" scope="row">310</th>
-              <td>Play area</td>
-              <td>Toddler</td>
-              <td>No</td>
-              <td>Yes</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
-
-            <tr>
-              <th class="" scope="row">1133</th>
-              <td>Play area</td>
-              <td>Toddler</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
-
-            <tr>
-              <th class="" scope="row">1032</th>
-              <td>Play area</td>
-              <td>Toddler</td>
-              <td>No</td>
-              <td>No</td>
-              <td>Yes</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
-
-            <tr>
-              <th class="" scope="row">1647</th>
-              <td>Play area</td>
-              <td>Toddler</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>Yes</td>
-              <td>No</td>
-            </tr>
-
-            <tr>
-              <th class="" scope="row">1700</th>
-              <td>Play structure</td>
-              <td>Junior</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
-
-            <tr>
-              <th class="" scope="row">1213</th>
-              <td>Play area</td>
-              <td>Toddler</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
-
-            <tr>
-              <th class="" scope="row">2452</th>
-              <td>Play area</td>
-              <td>Junior</td>
-              <td>Yes</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
-
-            <tr>
-              <th class="" scope="row">1010</th>
-              <td>Play area</td>
-              <td>Toddler</td>
-              <td>No</td>
-              <td>Yes</td>
-              <td>No</td>
-              <td>Yes</td>
-              <td>No</td>
-            </tr>
-
-            <tr>
-              <th class="" scope="row">960</th>
-              <td>Play structure</td>
-              <td>Junior</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
-
-            <tr>
-              <th class="" scope="row">555</th>
-              <td>Play structure</td>
-              <td>senior</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
-
-            <tr>
-              <th class="" scope="row">403</th>
-              <td>Play structure</td>
-              <td>Toddler</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
-
-            <tr>
-              <th class="" scope="row">89</th>
-              <td>Play area</td>
-              <td>Junior</td>
-              <td>Yes</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
-
-            <tr>
-              <th class="" scope="row">786</th>
-              <td>Play area</td>
-              <td>Toddler</td>
-              <td>Yes</td>
-              <td>Yes</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
-
-            <tr>
-              <th class="" scope="row">108</th>
-              <td>Play structure</td>
-              <td>Junior</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
-
-            <tr>
-              <th class="" scope="row">686</th>
-              <td>Play structure</td>
-              <td>Junior</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
-
-            <tr>
-              <th class="" scope="row">1083</th>
-              <td>Play area</td>
-              <td>Toddler</td>
-              <td>Yes</td>
-              <td>No</td>
-              <td>Yes</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
-
-            <tr>
-              <th class="" scope="row">806</th>
-              <td>Play structure</td>
-              <td>senior</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
-
-            <tr>
-              <th class="" scope="row">1032</th>
-              <td>Play area</td>
-              <td>Toddler</td>
-              <td>Yes</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
-
-            <tr>
-              <th class="" scope="row">65</th>
-              <td>Play structure</td>
-              <td>Toddler</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
-
-            <tr>
-              <th class="" scope="row">609</th>
-              <td>Play area</td>
-              <td>Junior</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
-  </tbody>
     </div>
-</body>
-</html>
+  </header>
+
+  <div class="playgrounds gutter-1-2 pad-b-1-2">
+    <h2 class="pad-t-1-2 push-1-2">Nearest playgrounds</h2>
+
+    <div class="grid box island-1-2 push-1-2">
+      <p class="unit xs-1 s-1 m- bold push-0">373</p>
+      <p class="unit xs-1 s-1-2 italic push-0">Distance</p>
+      <p class="unit xs-1 s-1-2 push-0">0.75km</p>
+    </div>
+
+    <div class="grid box island-1-2 push-1-2">
+      <p class="unit xs-1 s-1 m- bold push-0">1700</p>
+      <p class="unit xs-1 s-1-2 italic push-0">Distance</p>
+      <p class="unit xs-1 s-1-2 push-0">2.58km</p>
+    </div>
+
+    <div class="grid box island-1-2 push-1-2">
+      <p class="unit xs-1 s-1 m- bold push-0">960</p>
+      <p class="unit xs-1 s-1-2 italic push-0">Distance</p>
+      <p class="unit xs-1 s-1-2 push-0">3.03km</p>
+    </div>
+  </div>
+
+  <div class="playground-city table-wrapper scrollable">
+    <table border="1" class="">
+      <caption class="not-italic bold giga">Playgrounds in the city</caption>
+      <thead>
+        <tr>
+          <th class="park-id" scope="col">Park ID</th>
+          <th class="park-type" scope="col">Park type</th>
+          <th class="age-group" scope="col">Age group</th>
+          <th class="swings" scope="col">Swings</th>
+          <th class="slides" scope="col">Slides</th>
+          <th class="seesaws" scope="col">Seesaws</th>
+          <th class="sandboxes" scope="col">Sandboxes</th>
+          <th class="playhouses" scope="col">Playhouses</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <tr>
+          <th class="" scope="row">545</th>
+          <td>Play area</td>
+          <td>Junior</td>
+          <td>Yes</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+        </tr>
+
+        <tr>
+          <th class="" scope="row">81</th>
+          <td>Play area</td>
+          <td>Toddler</td>
+          <td>Yes</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+        </tr>
+
+        <tr>
+          <th class="" scope="row">140</th>
+          <td>Play structure</td>
+          <td>Junior</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+        </tr>
+
+        <tr>
+          <th class="" scope="row">376</th>
+          <td>Play area</td>
+          <td>Toddler</td>
+          <td>Yes</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+        </tr>
+
+        <tr>
+          <th class="" scope="row">373</th>
+          <td>Play area</td>
+          <td>Junior</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+          <td>Yes</td>
+        </tr>
+
+        <tr>
+          <th class="" scope="row">310</th>
+          <td>Play area</td>
+          <td>Toddler</td>
+          <td>No</td>
+          <td>Yes</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+        </tr>
+
+        <tr>
+          <th class="" scope="row">1133</th>
+          <td>Play area</td>
+          <td>Toddler</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+        </tr>
+
+        <tr>
+          <th class="" scope="row">1032</th>
+          <td>Play area</td>
+          <td>Toddler</td>
+          <td>No</td>
+          <td>No</td>
+          <td>Yes</td>
+          <td>No</td>
+          <td>No</td>
+        </tr>
+
+        <tr>
+          <th class="" scope="row">1647</th>
+          <td>Play area</td>
+          <td>Toddler</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+          <td>Yes</td>
+          <td>No</td>
+        </tr>
+
+        <tr>
+          <th class="" scope="row">1700</th>
+          <td>Play structure</td>
+          <td>Junior</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+        </tr>
+
+        <tr>
+          <th class="" scope="row">1213</th>
+          <td>Play area</td>
+          <td>Toddler</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+        </tr>
+
+        <tr>
+          <th class="" scope="row">2452</th>
+          <td>Play area</td>
+          <td>Junior</td>
+          <td>Yes</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+        </tr>
+
+        <tr>
+          <th class="" scope="row">1010</th>
+          <td>Play area</td>
+          <td>Toddler</td>
+          <td>No</td>
+          <td>Yes</td>
+          <td>No</td>
+          <td>Yes</td>
+          <td>No</td>
+        </tr>
+
+        <tr>
+          <th class="" scope="row">960</th>
+          <td>Play structure</td>
+          <td>Junior</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+        </tr>
+
+        <tr>
+          <th class="" scope="row">555</th>
+          <td>Play structure</td>
+          <td>senior</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+        </tr>
+
+        <tr>
+          <th class="" scope="row">403</th>
+          <td>Play structure</td>
+          <td>Toddler</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+        </tr>
+
+        <tr>
+          <th class="" scope="row">89</th>
+          <td>Play area</td>
+          <td>Junior</td>
+          <td>Yes</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+        </tr>
+
+        <tr>
+          <th class="" scope="row">786</th>
+          <td>Play area</td>
+          <td>Toddler</td>
+          <td>Yes</td>
+          <td>Yes</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+        </tr>
+
+        <tr>
+          <th class="" scope="row">108</th>
+          <td>Play structure</td>
+          <td>Junior</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+        </tr>
+
+        <tr>
+          <th class="" scope="row">686</th>
+          <td>Play structure</td>
+          <td>Junior</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+        </tr>
+
+        <tr>
+          <th class="" scope="row">1083</th>
+          <td>Play area</td>
+          <td>Toddler</td>
+          <td>Yes</td>
+          <td>No</td>
+          <td>Yes</td>
+          <td>No</td>
+          <td>No</td>
+        </tr>
+
+        <tr>
+          <th class="" scope="row">806</th>
+          <td>Play structure</td>
+          <td>senior</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+        </tr>
+
+        <tr>
+          <th class="" scope="row">1032</th>
+          <td>Play area</td>
+          <td>Toddler</td>
+          <td>Yes</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+        </tr>
+
+        <tr>
+          <th class="" scope="row">65</th>
+          <td>Play structure</td>
+          <td>Toddler</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+        </tr>
+
+        <tr>
+          <th class="" scope="row">609</th>
+          <td>Play area</td>
+          <td>Junior</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+          <td>No</td>
+        </tr>
+      </tbody>
+    </div>
+  </body>
+  </html>
