--- a/index.html
+++ b/index.html
@@ -22,320 +22,326 @@
     </div>
   </header>
 
-  <div class="playgrounds gutter-1-2 pad-b-1-2">
-    <h2 class="pad-t-1-2 push-1-2">Nearest playgrounds</h2>
+  <div class="grid playgrounds gutter-1-2 pad-b-1-2">
+    <div class="unit xs-1 s-1 m-1-3 l-1-3">
+      <h2 class="pad-t-1-2 push-1-2">Nearest playgrounds</h2>
 
-    <div class="grid box island-1-2 push-1-2">
-      <p class="unit xs-1 s-1 m- bold push-0">373</p>
-      <p class="unit xs-1 s-1-2 italic push-0">Distance</p>
-      <p class="unit xs-1 s-1-2 push-0">0.75km</p>
-    </div>
+      <div class="grid box island-1-2 push-1-2">
+        <p class="unit xs-1 s-1 m-1 l-1 bold push-0">373</p>
+        <p class="unit xs-1 s-1-2 m-1 l-1 italic push-0">Distance</p>
+        <p class="unit xs-1 s-1-2 m-1 l-1 push-0">0.75 km</p>
+      </div>
 
-    <div class="grid box island-1-2 push-1-2">
-      <p class="unit xs-1 s-1 m- bold push-0">1700</p>
-      <p class="unit xs-1 s-1-2 italic push-0">Distance</p>
-      <p class="unit xs-1 s-1-2 push-0">2.58km</p>
-    </div>
+      <div class="grid box island-1-2 push-1-2">
+        <p class="unit xs-1 s-1 m-1 l-1 bold push-0">1700</p>
+        <p class="unit xs-1 s-1-2 m-1 l-1 italic push-0">Distance</p>
+        <p class="unit xs-1 s-1-2 m-1 l-1 push-0">2.58 km</p>
+      </div>
 
-    <div class="grid box island-1-2 push-1-2">
-      <p class="unit xs-1 s-1 m- bold push-0">960</p>
-      <p class="unit xs-1 s-1-2 italic push-0">Distance</p>
-      <p class="unit xs-1 s-1-2 push-0">3.03km</p>
+      <div class="grid box island-1-2 push-1-2">
+        <p class="unit xs-1 s-1 m-1 l-1 bold push-0">960</p>
+        <p class="unit xs-1 s-1-2 m-1 l-1 italic push-0">Distance</p>
+        <p class="unit xs-1 s-1-2 m-1 l-1 push-0">3.03 km</p>
+      </div>
     </div>
   </div>
 
-  <div class="playground-city table-wrapper scrollable">
-    <table border="1" class="">
-      <caption class="not-italic bold giga">Playgrounds in the city</caption>
-      <thead>
-        <tr>
-          <th class="park-id" scope="col">Park ID</th>
-          <th class="park-type" scope="col">Park type</th>
-          <th class="age-group" scope="col">Age group</th>
-          <th class="swings" scope="col">Swings</th>
-          <th class="slides" scope="col">Slides</th>
-          <th class="seesaws" scope="col">Seesaws</th>
-          <th class="sandboxes" scope="col">Sandboxes</th>
-          <th class="playhouses" scope="col">Playhouses</th>
-        </tr>
-      </thead>
+  <div class="grid playground-city table-wrapper scrollable">
+    <div class="unit xs-1 s-1 m-2-3 l-2-3">
+      <table>
 
-      <tbody>
-        <tr>
-          <th class="" scope="row">545</th>
-          <td>Play area</td>
-          <td>Junior</td>
-          <td>Yes</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-        </tr>
+        <caption class="not-italic bold giga">Playgrounds in the city</caption>
+        <thead>
+          <tr>
+            <th class="park-id" scope="col">Park ID</th>
+            <th class="park-type" scope="col">Park type</th>
+            <th class="age-group" scope="col">Age group</th>
+            <th class="swings" scope="col">Swings</th>
+            <th class="slides" scope="col">Slides</th>
+            <th class="seesaws" scope="col">Seesaws</th>
+            <th class="sandboxes" scope="col">Sandboxes</th>
+            <th class="playhouses" scope="col">Playhouses</th>
+          </tr>
+        </thead>
 
-        <tr>
-          <th class="" scope="row">81</th>
-          <td>Play area</td>
-          <td>Toddler</td>
-          <td>Yes</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-        </tr>
+        <tbody>
+          <tr>
+            <th class="" scope="row">545</th>
+            <td>Play area</td>
+            <td>Junior</td>
+            <td>Yes</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-        <tr>
-          <th class="" scope="row">140</th>
-          <td>Play structure</td>
-          <td>Junior</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-        </tr>
+          <tr>
+            <th class="" scope="row">81</th>
+            <td>Play area</td>
+            <td>Toddler</td>
+            <td>Yes</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-        <tr>
-          <th class="" scope="row">376</th>
-          <td>Play area</td>
-          <td>Toddler</td>
-          <td>Yes</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-        </tr>
+          <tr>
+            <th class="" scope="row">140</th>
+            <td>Play structure</td>
+            <td>Junior</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-        <tr>
-          <th class="" scope="row">373</th>
-          <td>Play area</td>
-          <td>Junior</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-          <td>Yes</td>
-        </tr>
+          <tr>
+            <th class="" scope="row">376</th>
+            <td>Play area</td>
+            <td>Toddler</td>
+            <td>Yes</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-        <tr>
-          <th class="" scope="row">310</th>
-          <td>Play area</td>
-          <td>Toddler</td>
-          <td>No</td>
-          <td>Yes</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-        </tr>
+          <tr>
+            <th class="" scope="row">373</th>
+            <td>Play area</td>
+            <td>Junior</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>Yes</td>
+          </tr>
 
-        <tr>
-          <th class="" scope="row">1133</th>
-          <td>Play area</td>
-          <td>Toddler</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-        </tr>
+          <tr>
+            <th class="" scope="row">310</th>
+            <td>Play area</td>
+            <td>Toddler</td>
+            <td>No</td>
+            <td>Yes</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-        <tr>
-          <th class="" scope="row">1032</th>
-          <td>Play area</td>
-          <td>Toddler</td>
-          <td>No</td>
-          <td>No</td>
-          <td>Yes</td>
-          <td>No</td>
-          <td>No</td>
-        </tr>
+          <tr>
+            <th class="" scope="row">1133</th>
+            <td>Play area</td>
+            <td>Toddler</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-        <tr>
-          <th class="" scope="row">1647</th>
-          <td>Play area</td>
-          <td>Toddler</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-          <td>Yes</td>
-          <td>No</td>
-        </tr>
+          <tr>
+            <th class="" scope="row">1032</th>
+            <td>Play area</td>
+            <td>Toddler</td>
+            <td>No</td>
+            <td>No</td>
+            <td>Yes</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-        <tr>
-          <th class="" scope="row">1700</th>
-          <td>Play structure</td>
-          <td>Junior</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-        </tr>
+          <tr>
+            <th class="" scope="row">1647</th>
+            <td>Play area</td>
+            <td>Toddler</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>Yes</td>
+            <td>No</td>
+          </tr>
 
-        <tr>
-          <th class="" scope="row">1213</th>
-          <td>Play area</td>
-          <td>Toddler</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-        </tr>
+          <tr>
+            <th class="" scope="row">1700</th>
+            <td>Play structure</td>
+            <td>Junior</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-        <tr>
-          <th class="" scope="row">2452</th>
-          <td>Play area</td>
-          <td>Junior</td>
-          <td>Yes</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-        </tr>
+          <tr>
+            <th class="" scope="row">1213</th>
+            <td>Play area</td>
+            <td>Toddler</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-        <tr>
-          <th class="" scope="row">1010</th>
-          <td>Play area</td>
-          <td>Toddler</td>
-          <td>No</td>
-          <td>Yes</td>
-          <td>No</td>
-          <td>Yes</td>
-          <td>No</td>
-        </tr>
+          <tr>
+            <th class="" scope="row">2452</th>
+            <td>Play area</td>
+            <td>Junior</td>
+            <td>Yes</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-        <tr>
-          <th class="" scope="row">960</th>
-          <td>Play structure</td>
-          <td>Junior</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-        </tr>
+          <tr>
+            <th class="" scope="row">1010</th>
+            <td>Play area</td>
+            <td>Toddler</td>
+            <td>No</td>
+            <td>Yes</td>
+            <td>No</td>
+            <td>Yes</td>
+            <td>No</td>
+          </tr>
 
-        <tr>
-          <th class="" scope="row">555</th>
-          <td>Play structure</td>
-          <td>senior</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-        </tr>
+          <tr>
+            <th class="" scope="row">960</th>
+            <td>Play structure</td>
+            <td>Junior</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-        <tr>
-          <th class="" scope="row">403</th>
-          <td>Play structure</td>
-          <td>Toddler</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-        </tr>
+          <tr>
+            <th class="" scope="row">555</th>
+            <td>Play structure</td>
+            <td>senior</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-        <tr>
-          <th class="" scope="row">89</th>
-          <td>Play area</td>
-          <td>Junior</td>
-          <td>Yes</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-        </tr>
+          <tr>
+            <th class="" scope="row">403</th>
+            <td>Play structure</td>
+            <td>Toddler</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-        <tr>
-          <th class="" scope="row">786</th>
-          <td>Play area</td>
-          <td>Toddler</td>
-          <td>Yes</td>
-          <td>Yes</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-        </tr>
+          <tr>
+            <th class="" scope="row">89</th>
+            <td>Play area</td>
+            <td>Junior</td>
+            <td>Yes</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-        <tr>
-          <th class="" scope="row">108</th>
-          <td>Play structure</td>
-          <td>Junior</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-        </tr>
+          <tr>
+            <th class="" scope="row">786</th>
+            <td>Play area</td>
+            <td>Toddler</td>
+            <td>Yes</td>
+            <td>Yes</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-        <tr>
-          <th class="" scope="row">686</th>
-          <td>Play structure</td>
-          <td>Junior</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-        </tr>
+          <tr>
+            <th class="" scope="row">108</th>
+            <td>Play structure</td>
+            <td>Junior</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-        <tr>
-          <th class="" scope="row">1083</th>
-          <td>Play area</td>
-          <td>Toddler</td>
-          <td>Yes</td>
-          <td>No</td>
-          <td>Yes</td>
-          <td>No</td>
-          <td>No</td>
-        </tr>
+          <tr>
+            <th class="" scope="row">686</th>
+            <td>Play structure</td>
+            <td>Junior</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-        <tr>
-          <th class="" scope="row">806</th>
-          <td>Play structure</td>
-          <td>senior</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-        </tr>
+          <tr>
+            <th class="" scope="row">1083</th>
+            <td>Play area</td>
+            <td>Toddler</td>
+            <td>Yes</td>
+            <td>No</td>
+            <td>Yes</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-        <tr>
-          <th class="" scope="row">1032</th>
-          <td>Play area</td>
-          <td>Toddler</td>
-          <td>Yes</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-        </tr>
+          <tr>
+            <th class="" scope="row">806</th>
+            <td>Play structure</td>
+            <td>senior</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-        <tr>
-          <th class="" scope="row">65</th>
-          <td>Play structure</td>
-          <td>Toddler</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-        </tr>
+          <tr>
+            <th class="" scope="row">1032</th>
+            <td>Play area</td>
+            <td>Toddler</td>
+            <td>Yes</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-        <tr>
-          <th class="" scope="row">609</th>
-          <td>Play area</td>
-          <td>Junior</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-          <td>No</td>
-        </tr>
-      </tbody>
+          <tr>
+            <th class="" scope="row">65</th>
+            <td>Play structure</td>
+            <td>Toddler</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
+
+          <tr>
+            <th class="" scope="row">609</th>
+            <td>Play area</td>
+            <td>Junior</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-  </body>
-  </html>
+  </div>
+</body>
+</html>
