--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <body>
 
   <header class="grid gutter-1-2">
-    <img class="unit xs-2-3 s-1-2 m-1-2 l-1-2 push-1-4 logo" src="images/logo.svg" alt="">
+    <img class="unit xs-2-3 s-1-2 m-1-3 l-1-3 push-1-4 logo" src="images/logo.svg" alt="">
 
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 push">
+    <div class="unit xs-1 s-1 m-2-3 l-2-3 push" id="input-container">
+      <img class="i-1" src="images/search.svg" alt="">
       <label for="search"></label>
-      <input id="search" type="search" name="search-bar" value="" required>
-
+      <input id="search" type="Search" name="search-bar" value="" required>
     </div>
   </header>
 
@@ -209,7 +209,7 @@
           </tr>
 
           <tr>
-            <th class="" scope="row">960</th>
+            <th scope="row">960</th>
             <td>Play structure</td>
             <td>Junior</td>
             <td>No</td>
@@ -220,7 +220,7 @@
           </tr>
 
           <tr>
-            <th class="" scope="row">555</th>
+            <th scope="row">555</th>
             <td>Play structure</td>
             <td>senior</td>
             <td>No</td>
@@ -231,7 +231,7 @@
           </tr>
 
           <tr>
-            <th class="" scope="row">403</th>
+            <th scope="row">403</th>
             <td>Play structure</td>
             <td>Toddler</td>
             <td>No</td>
@@ -242,7 +242,7 @@
           </tr>
 
           <tr>
-            <th class="" scope="row">89</th>
+            <th scope="row">89</th>
             <td>Play area</td>
             <td>Junior</td>
             <td>Yes</td>
@@ -253,7 +253,7 @@
           </tr>
 
           <tr>
-            <th class="" scope="row">786</th>
+            <th scope="row">786</th>
             <td>Play area</td>
             <td>Toddler</td>
             <td>Yes</td>
@@ -264,7 +264,7 @@
           </tr>
 
           <tr>
-            <th class="" scope="row">108</th>
+            <th scope="row">108</th>
             <td>Play structure</td>
             <td>Junior</td>
             <td>No</td>
@@ -275,7 +275,7 @@
           </tr>
 
           <tr>
-            <th class="" scope="row">686</th>
+            <th scope="row">686</th>
             <td>Play structure</td>
             <td>Junior</td>
             <td>No</td>
@@ -286,7 +286,7 @@
           </tr>
 
           <tr>
-            <th class="" scope="row">1083</th>
+            <th scope="row">1083</th>
             <td>Play area</td>
             <td>Toddler</td>
             <td>Yes</td>
@@ -297,7 +297,7 @@
           </tr>
 
           <tr>
-            <th class="" scope="row">806</th>
+            <th scope="row">806</th>
             <td>Play structure</td>
             <td>senior</td>
             <td>No</td>
@@ -308,7 +308,7 @@
           </tr>
 
           <tr>
-            <th class="" scope="row">1032</th>
+            <th scope="row">1032</th>
             <td>Play area</td>
             <td>Toddler</td>
             <td>Yes</td>
@@ -319,7 +319,7 @@
           </tr>
 
           <tr>
-            <th class="" scope="row">65</th>
+            <th scope="row">65</th>
             <td>Play structure</td>
             <td>Toddler</td>
             <td>No</td>
@@ -330,7 +330,7 @@
           </tr>
 
           <tr>
-            <th class="" scope="row">609</th>
+            <th scope="row">609</th>
             <td>Play area</td>
             <td>Junior</td>
             <td>No</td>
