Remove unnecessary classes

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <tbody>
           <tr>
-            <th class="" scope="row">545</th>
+            <th scope="row">545</th>
             <td>Play area</td>
             <td>Junior</td>
             <td>Yes</td>
@@ -77,7 +77,7 @@
           </tr>
 
           <tr>
-            <th class="" scope="row">81</th>
+            <th scope="row">81</th>
             <td>Play area</td>
             <td>Toddler</td>
             <td>Yes</td>
@@ -88,7 +88,7 @@
           </tr>
 
           <tr>
-            <th class="" scope="row">140</th>
+            <th scope="row">140</th>
             <td>Play structure</td>
             <td>Junior</td>
             <td>No</td>
@@ -99,7 +99,7 @@
           </tr>
 
           <tr>
-            <th class="" scope="row">376</th>
+            <th scope="row">376</th>
             <td>Play area</td>
             <td>Toddler</td>
             <td>Yes</td>
@@ -110,7 +110,7 @@
           </tr>
 
           <tr>
-            <th class="" scope="row">373</th>
+            <th scope="row">373</th>
             <td>Play area</td>
             <td>Junior</td>
             <td>No</td>
@@ -121,7 +121,7 @@
           </tr>
 
           <tr>
-            <th class="" scope="row">310</th>
+            <th scope="row">310</th>
             <td>Play area</td>
             <td>Toddler</td>
             <td>No</td>
@@ -132,7 +132,7 @@
           </tr>
 
           <tr>
-            <th class="" scope="row">1133</th>
+            <th scope="row">1133</th>
             <td>Play area</td>
             <td>Toddler</td>
             <td>No</td>
@@ -143,7 +143,7 @@
           </tr>
 
           <tr>
-            <th class="" scope="row">1032</th>
+            <th scope="row">1032</th>
             <td>Play area</td>
             <td>Toddler</td>
             <td>No</td>
@@ -154,7 +154,7 @@
           </tr>
 
           <tr>
-            <th class="" scope="row">1647</th>
+            <th scope="row">1647</th>
             <td>Play area</td>
             <td>Toddler</td>
             <td>No</td>
@@ -165,7 +165,7 @@
           </tr>
 
           <tr>
-            <th class="" scope="row">1700</th>
+            <th scope="row">1700</th>
             <td>Play structure</td>
             <td>Junior</td>
             <td>No</td>
@@ -176,7 +176,7 @@
           </tr>
 
           <tr>
-            <th class="" scope="row">1213</th>
+            <th scope="row">1213</th>
             <td>Play area</td>
             <td>Toddler</td>
             <td>No</td>
@@ -187,7 +187,7 @@
           </tr>
 
           <tr>
-            <th class="" scope="row">2452</th>
+            <th scope="row">2452</th>
             <td>Play area</td>
             <td>Junior</td>
             <td>Yes</td>
@@ -198,7 +198,7 @@
           </tr>
 
           <tr>
-            <th class="" scope="row">1010</th>
+            <th scope="row">1010</th>
             <td>Play area</td>
             <td>Toddler</td>
             <td>No</td>
