--- a/index.html
+++ b/index.html
@@ -44,304 +44,301 @@
         <p class="unit xs-1 s-1-2 m-1 l-1 push-0">3.03 km</p>
       </div>
     </div>
-  </div>
 
-  <div class="grid list-group table-wrapper scrollable">
-    <div class="unit xs-1 s-1 m-2-3 l-2-3">
-      <table>
+      <div class="unit xs-1 s-1 m-2-3 l-2-3 list-group table-wrapper scrollable">
+        <table>
+          <caption class="not-italic bold giga">Playgrounds in the city</caption>
+          <thead>
+            <tr>
+              <th class="park-id" scope="col">Park ID</th>
+              <th class="park-type" scope="col">Park type</th>
+              <th class="age-group" scope="col">Age group</th>
+              <th class="swings" scope="col">Swings</th>
+              <th class="slides" scope="col">Slides</th>
+              <th class="seesaws" scope="col">Seesaws</th>
+              <th class="sandboxes" scope="col">Sandboxes</th>
+              <th class="playhouses" scope="col">Playhouses</th>
+            </tr>
+          </thead>
 
-        <caption class="not-italic bold giga">Playgrounds in the city</caption>
-        <thead>
-          <tr>
-            <th class="park-id" scope="col">Park ID</th>
-            <th class="park-type" scope="col">Park type</th>
-            <th class="age-group" scope="col">Age group</th>
-            <th class="swings" scope="col">Swings</th>
-            <th class="slides" scope="col">Slides</th>
-            <th class="seesaws" scope="col">Seesaws</th>
-            <th class="sandboxes" scope="col">Sandboxes</th>
-            <th class="playhouses" scope="col">Playhouses</th>
-          </tr>
-        </thead>
+          <tbody>
+            <tr>
+              <th scope="row">545</th>
+              <td>Play area</td>
+              <td>Junior</td>
+              <td>Yes</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+            </tr>
 
-        <tbody>
-          <tr>
-            <th scope="row">545</th>
-            <td>Play area</td>
-            <td>Junior</td>
-            <td>Yes</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-          </tr>
+            <tr>
+              <th scope="row">81</th>
+              <td>Play area</td>
+              <td>Toddler</td>
+              <td>Yes</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+            </tr>
 
-          <tr>
-            <th scope="row">81</th>
-            <td>Play area</td>
-            <td>Toddler</td>
-            <td>Yes</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-          </tr>
+            <tr>
+              <th scope="row">140</th>
+              <td>Play structure</td>
+              <td>Junior</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+            </tr>
 
-          <tr>
-            <th scope="row">140</th>
-            <td>Play structure</td>
-            <td>Junior</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-          </tr>
+            <tr>
+              <th scope="row">376</th>
+              <td>Play area</td>
+              <td>Toddler</td>
+              <td>Yes</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+            </tr>
 
-          <tr>
-            <th scope="row">376</th>
-            <td>Play area</td>
-            <td>Toddler</td>
-            <td>Yes</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-          </tr>
+            <tr>
+              <th scope="row">373</th>
+              <td>Play area</td>
+              <td>Junior</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+              <td>Yes</td>
+            </tr>
 
-          <tr>
-            <th scope="row">373</th>
-            <td>Play area</td>
-            <td>Junior</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-            <td>Yes</td>
-          </tr>
+            <tr>
+              <th scope="row">310</th>
+              <td>Play area</td>
+              <td>Toddler</td>
+              <td>No</td>
+              <td>Yes</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+            </tr>
 
-          <tr>
-            <th scope="row">310</th>
-            <td>Play area</td>
-            <td>Toddler</td>
-            <td>No</td>
-            <td>Yes</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-          </tr>
+            <tr>
+              <th scope="row">1133</th>
+              <td>Play area</td>
+              <td>Toddler</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+            </tr>
 
-          <tr>
-            <th scope="row">1133</th>
-            <td>Play area</td>
-            <td>Toddler</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-          </tr>
+            <tr>
+              <th scope="row">1032</th>
+              <td>Play area</td>
+              <td>Toddler</td>
+              <td>No</td>
+              <td>No</td>
+              <td>Yes</td>
+              <td>No</td>
+              <td>No</td>
+            </tr>
 
-          <tr>
-            <th scope="row">1032</th>
-            <td>Play area</td>
-            <td>Toddler</td>
-            <td>No</td>
-            <td>No</td>
-            <td>Yes</td>
-            <td>No</td>
-            <td>No</td>
-          </tr>
+            <tr>
+              <th scope="row">1647</th>
+              <td>Play area</td>
+              <td>Toddler</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+              <td>Yes</td>
+              <td>No</td>
+            </tr>
 
-          <tr>
-            <th scope="row">1647</th>
-            <td>Play area</td>
-            <td>Toddler</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-            <td>Yes</td>
-            <td>No</td>
-          </tr>
+            <tr>
+              <th scope="row">1700</th>
+              <td>Play structure</td>
+              <td>Junior</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+            </tr>
 
-          <tr>
-            <th scope="row">1700</th>
-            <td>Play structure</td>
-            <td>Junior</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-          </tr>
+            <tr>
+              <th scope="row">1213</th>
+              <td>Play area</td>
+              <td>Toddler</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+            </tr>
 
-          <tr>
-            <th scope="row">1213</th>
-            <td>Play area</td>
-            <td>Toddler</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-          </tr>
+            <tr>
+              <th scope="row">2452</th>
+              <td>Play area</td>
+              <td>Junior</td>
+              <td>Yes</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+            </tr>
 
-          <tr>
-            <th scope="row">2452</th>
-            <td>Play area</td>
-            <td>Junior</td>
-            <td>Yes</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-          </tr>
+            <tr>
+              <th scope="row">1010</th>
+              <td>Play area</td>
+              <td>Toddler</td>
+              <td>No</td>
+              <td>Yes</td>
+              <td>No</td>
+              <td>Yes</td>
+              <td>No</td>
+            </tr>
 
-          <tr>
-            <th scope="row">1010</th>
-            <td>Play area</td>
-            <td>Toddler</td>
-            <td>No</td>
-            <td>Yes</td>
-            <td>No</td>
-            <td>Yes</td>
-            <td>No</td>
-          </tr>
+            <tr>
+              <th scope="row">960</th>
+              <td>Play structure</td>
+              <td>Junior</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+            </tr>
 
-          <tr>
-            <th scope="row">960</th>
-            <td>Play structure</td>
-            <td>Junior</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-          </tr>
+            <tr>
+              <th scope="row">555</th>
+              <td>Play structure</td>
+              <td>senior</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+            </tr>
 
-          <tr>
-            <th scope="row">555</th>
-            <td>Play structure</td>
-            <td>senior</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-          </tr>
+            <tr>
+              <th scope="row">403</th>
+              <td>Play structure</td>
+              <td>Toddler</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+            </tr>
 
-          <tr>
-            <th scope="row">403</th>
-            <td>Play structure</td>
-            <td>Toddler</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-          </tr>
+            <tr>
+              <th scope="row">89</th>
+              <td>Play area</td>
+              <td>Junior</td>
+              <td>Yes</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+            </tr>
 
-          <tr>
-            <th scope="row">89</th>
-            <td>Play area</td>
-            <td>Junior</td>
-            <td>Yes</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-          </tr>
+            <tr>
+              <th scope="row">786</th>
+              <td>Play area</td>
+              <td>Toddler</td>
+              <td>Yes</td>
+              <td>Yes</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+            </tr>
 
-          <tr>
-            <th scope="row">786</th>
-            <td>Play area</td>
-            <td>Toddler</td>
-            <td>Yes</td>
-            <td>Yes</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-          </tr>
+            <tr>
+              <th scope="row">108</th>
+              <td>Play structure</td>
+              <td>Junior</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+            </tr>
 
-          <tr>
-            <th scope="row">108</th>
-            <td>Play structure</td>
-            <td>Junior</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-          </tr>
+            <tr>
+              <th scope="row">686</th>
+              <td>Play structure</td>
+              <td>Junior</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+            </tr>
 
-          <tr>
-            <th scope="row">686</th>
-            <td>Play structure</td>
-            <td>Junior</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-          </tr>
+            <tr>
+              <th scope="row">1083</th>
+              <td>Play area</td>
+              <td>Toddler</td>
+              <td>Yes</td>
+              <td>No</td>
+              <td>Yes</td>
+              <td>No</td>
+              <td>No</td>
+            </tr>
 
-          <tr>
-            <th scope="row">1083</th>
-            <td>Play area</td>
-            <td>Toddler</td>
-            <td>Yes</td>
-            <td>No</td>
-            <td>Yes</td>
-            <td>No</td>
-            <td>No</td>
-          </tr>
+            <tr>
+              <th scope="row">806</th>
+              <td>Play structure</td>
+              <td>senior</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+            </tr>
 
-          <tr>
-            <th scope="row">806</th>
-            <td>Play structure</td>
-            <td>senior</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-          </tr>
+            <tr>
+              <th scope="row">1032</th>
+              <td>Play area</td>
+              <td>Toddler</td>
+              <td>Yes</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+            </tr>
 
-          <tr>
-            <th scope="row">1032</th>
-            <td>Play area</td>
-            <td>Toddler</td>
-            <td>Yes</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-          </tr>
+            <tr>
+              <th scope="row">65</th>
+              <td>Play structure</td>
+              <td>Toddler</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+            </tr>
 
-          <tr>
-            <th scope="row">65</th>
-            <td>Play structure</td>
-            <td>Toddler</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-          </tr>
-
-          <tr>
-            <th scope="row">609</th>
-            <td>Play area</td>
-            <td>Junior</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-            <td>No</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+            <tr>
+              <th scope="row">609</th>
+              <td>Play area</td>
+              <td>Junior</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+              <td>No</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
   </div>
 </body>
 </html>
