--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
 
   <header class="grid gutter-1-2">
-    <img class="unit xs-2-3 s-1-2 m-1-3 l-1-3 push-1-4 logo pad-t-1-8" src="images/logo.svg" alt="">
+    <div class="unit xs-2-3 s-1-2 m-1-3 l-1-3 push-1-4 pad-t-1-8">
+      <h1 class="push-0 logo"><img class="img-flex" src="images/logo.svg" alt=""></h1>
+    </div>
 
     <div class="unit xs-1 s-1 m-2-3 l-2-3 push search" id="input-container">
       <img class="i-1" src="images/search.svg" alt="">
@@ -24,7 +26,7 @@
 
   <div class="grid playgrounds gutter-1-2 pad-b-1-2">
     <div class="unit xs-1 s-1 m-1-3 l-1-3 play">
-      <h1 class="pad-t-1-2 push-1-2 giga">Nearest playgrounds</h1>
+      <h2 class="pad-t-1-2 push-1-2 giga">Nearest playgrounds</h2>
 
       <div class="grid box island-1-2 push-1-2">
         <p class="unit xs-1 s-1 m-1 l-1 bold push-0">373</p>
