--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
 
   <header class="grid gutter-1-2">
-    <div class="unit xs-2-3 s-1-2 m-1-3 l-1-3 push-1-4 pad-t-1-8">
-      <h1 class="push-0 logo"><img class="img-flex" src="images/logo.svg" alt=""></h1>
+    <div class="unit xs-2-3 s-1-2 m-1-3 l-1-3 push-1-4 pad-t-1-2">
+      <h1 class="push-1-2 logo"><img class="img-flex" src="images/logo.svg" alt=""></h1>
     </div>
 
-    <div class="unit xs-1 s-1 m-2-3 l-2-3 push search" id="input-container">
+    <div class="unit xs-1 s-1 m-2-3 l-2-3 push-1-2 search pad-t-1-8" id="input-container">
       <img class="i-1" src="images/search.svg" alt="">
       <label for="search"></label>
       <input id="search" type="Search" name="search-bar" value="" required>
@@ -29,20 +29,20 @@
       <h2 class="pad-t-1-2 push-1-2 giga">Nearest playgrounds</h2>
 
       <div class="grid box island-1-2 push-1-2">
-        <p class="unit xs-1 s-1 m-1 l-1 bold push-0">373</p>
-        <p class="unit xs-1 s-1-2 m-1 l-1 italic push-0">Distance</p>
+        <p class="unit xs-1 s-1 m-1 l-1 bold push-1-8">373</p>
+        <p class="unit xs-1 s-1-2 m-1 l-1 italic push-1-8">Distance</p>
         <p class="unit xs-1 s-1-2 m-1 l-1 push-0">0.75 km</p>
       </div>
 
       <div class="grid box island-1-2 push-1-2">
-        <p class="unit xs-1 s-1 m-1 l-1 bold push-0">1700</p>
-        <p class="unit xs-1 s-1-2 m-1 l-1 italic push-0">Distance</p>
+        <p class="unit xs-1 s-1 m-1 l-1 bold push-1-8">1700</p>
+        <p class="unit xs-1 s-1-2 m-1 l-1 italic push-1-8">Distance</p>
         <p class="unit xs-1 s-1-2 m-1 l-1 push-0">2.58 km</p>
       </div>
 
       <div class="grid box island-1-2 push-1-2">
-        <p class="unit xs-1 s-1 m-1 l-1 bold push-0">960</p>
-        <p class="unit xs-1 s-1-2 m-1 l-1 italic push-0">Distance</p>
+        <p class="unit xs-1 s-1 m-1 l-1 bold push-1-8">960</p>
+        <p class="unit xs-1 s-1-2 m-1 l-1 italic push-1-8">Distance</p>
         <p class="unit xs-1 s-1-2 m-1 l-1 push-0">3.03 km</p>
       </div>
     </div>
