Add margin to the text to make box larger

--- a/index.html
+++ b/index.html
@@ -31,25 +31,25 @@
       <div class="grid box island-1-2 push-1-2">
         <p class="unit xs-1 s-1 m-1 l-1 bold push-1-8">373</p>
         <p class="unit xs-1 s-1-2 m-1 l-1 italic push-1-8">Distance</p>
-        <p class="unit xs-1 s-1-2 m-1 l-1 push-0">0.75 km</p>
+        <p class="unit xs-1 s-1-2 m-1 l-1 push-1-8">0.75 km</p>
       </div>
 
       <div class="grid box island-1-2 push-1-2">
         <p class="unit xs-1 s-1 m-1 l-1 bold push-1-8">1700</p>
         <p class="unit xs-1 s-1-2 m-1 l-1 italic push-1-8">Distance</p>
-        <p class="unit xs-1 s-1-2 m-1 l-1 push-0">2.58 km</p>
+        <p class="unit xs-1 s-1-2 m-1 l-1 push-1-8">2.58 km</p>
       </div>
 
       <div class="grid box island-1-2 push-1-2">
         <p class="unit xs-1 s-1 m-1 l-1 bold push-1-8">960</p>
         <p class="unit xs-1 s-1-2 m-1 l-1 italic push-1-8">Distance</p>
-        <p class="unit xs-1 s-1-2 m-1 l-1 push-0">3.03 km</p>
+        <p class="unit xs-1 s-1-2 m-1 l-1 push-1-8">3.03 km</p>
       </div>
     </div>
 
     <div class="unit xs-1 s-1 m-2-3 l-2-3 list-group table-wrapper scrollable">
       <table>
-        <caption class="not-italic bold giga">Playgrounds in the city</caption>
+        <caption class="not-italic bold giga pad-t-1-4 push-1-2">Playgrounds in the city</caption>
         <thead>
           <tr>
             <th class="park-id" scope="col">Park ID</th>
