--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
   <header class="grid gutter-1-2">
-    <div class="unit xs-2-3 s-1-2 m-1-3 l-1-3 push-1-4 pad-t-1-2">
+    <div class="unit xs-2-3 s-1-2 m-1-3 l-1-3 push-1-2 pad-t-1-2">
       <h1 class="push-1-2 logo"><img class="img-flex" src="images/logo.svg" alt=""></h1>
     </div>
 
@@ -26,7 +26,7 @@
 
   <div class="grid playgrounds gutter-1-2 pad-b-1-2">
     <div class="unit xs-1 s-1 m-1-3 l-1-3 play">
-      <h2 class="pad-t-1-2 push-1-2 giga">Nearest playgrounds</h2>
+      <h2 class="pad-t-1-2 push-1-2 giga bold">Nearest playgrounds</h2>
 
       <div class="grid box island-1-2 push-1-2">
         <p class="unit xs-1 s-1 m-1 l-1 bold push-1-8">373</p>
@@ -176,7 +176,7 @@
 
           <tr>
             <th scope="row">1213</th>
-            <td>Play area</td>
+            <td>Play structure</td>
             <td>Toddler</td>
             <td>No</td>
             <td>No</td>
