Remove margin from medium sized screen

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
 
   <header class="grid gutter-1-2">
-    <div class="unit xs-2-3 s-1-2 m-1-3 l-1-3 push-1-2 pad-t-1-2">
+    <div class="unit xs-2-3 s-1-2 m-1-3 l-1-3 push-1-2 pad-t-1-2 margin">
       <h1 class="push-1-2 logo"><img class="img-flex" src="images/logo.svg" alt=""></h1>
     </div>
 
-    <div class="unit xs-1 s-1 m-2-3 l-2-3 push-1-2 search pad-t-1-8" id="input-container">
+    <div class="unit xs-1 s-1 m-2-3 l-2-3 push-1-2 search pad-t-1-8 margin" id="input-container">
       <img class="i-1" src="images/search.svg" alt="">
       <label for="search"></label>
       <input id="search" type="Search" name="search-bar" value="" required>
